--- a/ui/app/styles/clinical/_visit.scss
+++ b/ui/app/styles/clinical/_visit.scss
@@ -190,6 +190,7 @@
     }
     tr td {
       font-size: 14px;
+      vertical-align: top;
       .discontinued-text {
         display: block;
         color: $mediumGray;
